--- a/面试准备/JAVASE/杂.md
+++ b/面试准备/JAVASE/杂.md
@@ -126,7 +126,7 @@ String str = "abcd";
 
 调用 intern 方法。
 
-从JDK7开始，**如果在常量池找不到对应的字符串，则不会再将字符串拷贝到常量池，而只是在常量池中生成一个对原字符串的引用。简单的说，就是往常量池放的东西变了：原来在常量池中找不到时，复制一个副本放到常量池，1.7后则是将在`<u>`堆上的地址引用复制到常量池`</u>`。**(intern不再拷贝字符串到常量池，而是只有堆的地址引用ef0010, 相比之前，可以节省空间,常量指针指向堆)
+从JDK7开始，**如果在常量池找不到对应的字符串，则不会再将字符串拷贝到常量池，而只是在常量池中生成一个对原字符串的引用。简单的说，就是往常量池放的东西变了：原来在常量池中找不到时，复制一个副本放到常量池，1.7后则是将在 `<u>`堆上的地址引用复制到常量池 `</u>`。**(intern不再拷贝字符串到常量池，而是只有堆的地址引用ef0010, 相比之前，可以节省空间,常量指针指向堆)
 
 ![1615098869302](img\String的intern方法.png)
 
@@ -245,7 +245,7 @@ main() {
    3.5 父类构造方法
 4. 子类非静态对象\<init>
 
-    4.5子类构造方法
+   4.5子类构造方法
 
 - 类的初始化
   - 子类初始化需要先初始化父类
@@ -418,7 +418,7 @@ class Finalizeee {
 
 1、JDK中的动态代理是通过反射类Proxy以及InvocationHandler回调接口实现的，**但是JDK中所有要进行动态代理的类必须要实现一个接口**，也就是说**只能对该类所实现接口中定义的方法(该类可以有自己的子类方法就代理不了了)**进行代理，这在实际编程中有一定的**局限性**，而且使用**反射的效率也不高**
 
-2、 Cglib动态代理：使用cglib是实现动态代理，**不受代理类必须实现接口的限制**，因为cglib底层是用**ASM框架**，使用**字节码技术生成代理类**，比使用Java反射的效率要高，`<u>`cglib不能对声明final的方法进行代理，因为cglib原理是动态生成被代理类的子类`</u>`
+2、 Cglib动态代理：使用cglib是实现动态代理，**不受代理类必须实现接口的限制**，因为cglib底层是用**ASM框架**，使用**字节码技术生成代理类**，比使用Java反射的效率要高，`<u>`cglib不能对声明final的方法进行代理，因为cglib原理是动态生成被代理类的子类 `</u>`
 
 - **什么时候用cglib什么时候用jdk动态代理？**
 
@@ -768,9 +768,9 @@ public class ThreadLocal<T> {
   
     // 静态内部类
     static class ThreadLocalMap {
-      
+    
         private Entry[] table;
-      
+    
         // Entry继承了弱引用，弱引用有GC就会被回收
         static class Entry extends WeakReference<ThreadLocal<?>> {
             /** The value associated with this ThreadLocal. */
@@ -780,15 +780,15 @@ public class ThreadLocal<T> {
                 super(k);
                 value = v;
             }
-          
+        
             // 这个方法是父类的方法，remove的本质是Entry.clear();
             public void clear() {
                 // referent即Entry构造方法的k
                 this.referent = null;
             }
-          
+        
         }
-      
+    
         private Entry getEntry(ThreadLocal<?> key) {
             int i = key.threadLocalHashCode & (table.length - 1);
             Entry e = table[i];
@@ -797,7 +797,7 @@ public class ThreadLocal<T> {
             else
                 return getEntryAfterMiss(key, i, e);
         }
-      
+    
         private void remove(ThreadLocal<?> key) {
             Entry[] tab = table;
             int len = tab.length;
@@ -842,3 +842,115 @@ PECS原则
 
 - Integer ii = null;
   System.out.println(ii instanceof Integer);  // null instanceof xxx    false
+
+## 16. 接口幂等
+
+比如新增操作，用户在前端进行了多次点击而造成重复请求，因此需要在一定时间内(比如1秒)判断是否重复
+
+### 16.1 请求参数携带唯一的标识
+
+客户端请求时，携带唯一标识，比如请求前先向服务端请求一个唯一id
+
+```java
+{
+ String KEY = "REQ12343456788";//请求唯一编号
+    long expireTime =  1000;// 1000毫秒过期，1000ms内的重复请求会认为重复
+    long expireAt = System.currentTimeMillis() + expireTime;
+    String val = "expireAt@" + expireAt;
+
+    //redis key还存在的话要就认为请求是重复的
+    Boolean firstSet = stringRedisTemplate.execute((RedisCallback<Boolean>) connection -> connection.set(KEY.getBytes(), val.getBytes(), Expiration.milliseconds(expireTime), RedisStringCommands.SetOption.SET_IF_ABSENT));
+
+    final boolean isConsiderDup;
+    if (firstSet != null && firstSet) {// 第一次访问
+        isConsiderDup = false;
+    } else {// redis值已存在，认为是重复了
+        isConsiderDup = true;
+    }}
+```
+
+### 16.2 业务参数去重
+
+按请求参数key排序，然后排除一些无用字段(比如时间)，然后进行md5加密，这样在固定时间内(1秒)如果有相同的md5存在则说明重复请求
+
+```java
+package com.codeman.JavaSE;
+
+import com.alibaba.fastjson2.JSON;
+import lombok.extern.slf4j.Slf4j;
+
+import javax.xml.bind.DatatypeConverter;
+import java.security.MessageDigest;
+import java.util.Arrays;
+import java.util.List;
+import java.util.TreeMap;
+
+@Slf4j
+public class ReqDedupHelper {
+
+    /**
+     *
+     * @param reqJSON 请求的参数，这里通常是JSON
+     * @param excludeKeys 请求参数里面要去除哪些字段再求摘要
+     * @return 去除参数的MD5摘要
+     */
+    public String dedupParamMD5(final String reqJSON, String... excludeKeys) {
+        String decreptParam = reqJSON;
+
+        TreeMap paramTreeMap = JSON.parseObject(decreptParam, TreeMap.class);
+        if (excludeKeys!=null) {
+            List<String> dedupExcludeKeys = Arrays.asList(excludeKeys);
+            if (!dedupExcludeKeys.isEmpty()) {
+                for (String dedupExcludeKey : dedupExcludeKeys) {
+                    paramTreeMap.remove(dedupExcludeKey);
+                }
+            }
+        }
+
+        String paramTreeMapJSON = JSON.toJSONString(paramTreeMap);
+        String md5deDupParam = jdkMD5(paramTreeMapJSON);
+        System.out.printf("md5deDupParam = {%s}, excludeKeys = {%s} {%s}", md5deDupParam, Arrays.deepToString(excludeKeys), paramTreeMapJSON);
+        return md5deDupParam;
+    }
+
+    private static String jdkMD5(String src) {
+        String res = null;
+        try {
+            MessageDigest messageDigest = MessageDigest.getInstance("MD5");
+            byte[] mdBytes = messageDigest.digest(src.getBytes());
+            res = DatatypeConverter.printHexBinary(mdBytes);
+        } catch (Exception e) {
+            System.out.printf("%s",e);
+        }
+        return res;
+    }
+
+    public static void main(String[] args) {
+        //两个请求一样，但是请求时间差一秒
+        String req = "{\n" +
+                "\"requestTime\" :\"20190101120001\",\n" +
+                "\"requestValue\" :\"1000\",\n" +
+                "\"requestKey\" :\"key\"\n" +
+                "}";
+
+        String req2 = "{\n" +
+                "\"requestTime\" :\"20190101120002\",\n" +
+                "\"requestValue\" :\"1000\",\n" +
+                "\"requestKey\" :\"key\"\n" +
+                "}";
+
+        //全参数比对，所以两个参数MD5不同
+        String dedupMD5 = new ReqDedupHelper().dedupParamMD5(req);
+        String dedupMD52 = new ReqDedupHelper().dedupParamMD5(req2);
+        System.out.println("req1MD5 = "+ dedupMD5+" , req2MD5="+dedupMD52);
+
+        //去除时间参数比对，MD5相同
+        String dedupMD53 = new ReqDedupHelper().dedupParamMD5(req,"requestTime");
+        String dedupMD54 = new ReqDedupHelper().dedupParamMD5(req2,"requestTime");
+        System.out.println("req1MD5 = "+ dedupMD53+" , req2MD5="+dedupMD54);
+
+    }
+}
+```
+
+### 16.3 分布式锁+数据库字段唯一索引
