--- a/面试准备/设计模式/设计模式.md
+++ b/面试准备/设计模式/设计模式.md
@@ -1,6 +1,6 @@
 # 设计模式
 
-## **0. 常用设计模式的使用场景：**
+## 0. 常用设计模式的使用场景：
 
 如果需要创建实例，则通常离不开工厂和单例模式；
 
@@ -164,7 +164,7 @@ public class Main {
 }
 ```
 
-### 1.3 命令模式
+### 1.3 命令模式 Command
 
 将命令/事件当成一个类来使用，
 
@@ -1135,12 +1135,183 @@ public class Main {
 }
 ```
 
-### 1.11 访问者模式
+### 1.11 访问者模式 Visitor
+将数据结构和处理分离开，把对数据的处理交给访问者。当对需要对数据进行新的操作时，只需增加新的访问者即可。
 
+#### 1.11.1 角色
+- Visitor 访问者
+负责对**数据结构**中的**每一个具体元素**定义特殊的访问方法visit(ConcreteElement)。
+- ConcreteVisitor 具体访问者
+- Element 元素
+表示Visitor可访问的对象，并且声明了接受访问者的方法accept(Visitor)
+- ConcreteElement 具体元素
+- ObjectStructure 结构对象
+负责处理Element元素集合(利用多态接受访问者accept(Visitor))
+
+#### 1.11.2 实例
+```java
+public interface Element {
+
+    void accept(Visitor visitor);
+}
+
+public abstract class Entry implements Element {
+
+    abstract String getName();
+    abstract int getSize();
+
+    public Entry add(Entry entry) {
+        throw new RuntimeException("add方法不可用");
+    }
+
+    public Iterator iterator() {
+        throw new RuntimeException("iterator方法不可用");
+    }
+
+    @Override
+    public String toString() {
+        return getName() + "(" + getSize() + ")";
+    }
+}
+
+public class File extends Entry {
+
+    private String name;
+    private int size;
+
+    public File(String name, int size) {
+        this.name = name;
+        this.size = size;
+    }
+
+    @Override
+    String getName() {
+        return name;
+    }
+
+    @Override
+    int getSize() {
+        return size;
+    }
+
+    @Override
+    public void accept(Visitor visitor) {
+        visitor.visit(this);
+    }
+}
+
+public class Directory extends Entry {
+
+    private String name;
+    private List<Entry> entryList = new ArrayList<>();
+
+    public Directory(String name) {
+        this.name = name;
+    }
+
+    @Override
+    public Entry add(Entry entry) {
+        entryList.add(entry);
+        return this;
+    }
+
+    @Override
+    public Iterator<Entry> iterator() {
+        return entryList.iterator();
+    }
+
+    @Override
+    String getName() {
+        return name;
+    }
+
+    @Override
+    int getSize() {
+        int size = 0;
+        Iterator<Entry> iterator = this.iterator();
+        while (iterator.hasNext()) {
+            Entry next = iterator.next();
+            size += next.getSize();
+        }
+        return size;
+    }
+
+    @Override
+    public void accept(Visitor visitor) {
+        visitor.visit(this);
+    }
+}
+
+public abstract class Visitor {
+
+    abstract void visit(File file);
+
+    abstract void visit(Directory directory);
+}
+
+
+public class ListVisitor extends Visitor {
+
+    private String currentDir = "";
+
+    @Override
+    void visit(File file) {
+        System.out.println(currentDir + "/" + file);
+    }
+
+    @Override
+    void visit(Directory directory) {
+        String currentDirTemp = currentDir;
+
+        // 拼接下一级目录，用全局变量，递归时可以共享
+        currentDir += "/" + directory.getName();
+
+        Iterator<Entry> iterator = directory.iterator();
+        if (!iterator.hasNext()) {
+            System.out.println(currentDirTemp + "/" + directory);
+        }
+        while (iterator.hasNext()) {
+            Entry next = iterator.next();
+            // 继续用当前Visitor去处理
+            // 这类采用了双重分发的形式，visit(Element)和accept(Visitor)相互递归
+            next.accept(this);
+        }
+
+
+        // 进来是什么，结束还是什么
+        currentDir = currentDirTemp;
+    }
+}
+
+public class VisitorMain {
+
+    public static void main(String[] args) {
+        Visitor visitor = new ListVisitor();
+
+        Directory directory1 = new Directory("目录1");
+        Directory directory11 = new Directory("目录11");
+        Directory directory12 = new Directory("目录12");
+        File file11 = new File("文件11", 500);
+        File file12 = new File("文件12", 789);
+
+        Directory directory111 = new Directory("目录111");
+        File file111 = new File("文件111", 567);
+
+
+        directory1.add(directory11);
+        directory1.add(directory12);
+        directory1.add(file11);
+        directory1.add(file12);
+        directory11.add(directory111);
+        directory11.add(file111);
+        directory1.accept(visitor);
+    }
+}
+```
 
 ## 2. 创建型模式
 
-### 2.1. 单例模式
+### 2.1. 单例模式 Singleton
 
 - 饿汉模式（不存在多线程安全问题）：
 
@@ -1313,17 +1484,18 @@ public class Main {
   }
   ```
 
-### 2.2 工厂模式
+### 2.2 工厂模式 Factory Method
 
-**对象的创建交由工厂对象创建，也不是调用者创建**
+**对象的创建交由工厂对象创建，也不是调用者创建(负责实例的生成，常与单例配合使用)**
 
-### 2.3 抽象工厂模式
+### 2.3 抽象工厂模式 Abstract Factory
+直接由抽象工厂生成抽象零件，而不关心具体工厂和具体实现。
 
-### 2.4 建造者模式
+### 2.4 建造者模式 Builder
 
 用来创建复杂对象用的。一般先拿到对象的builder对象，然后组装需要的参数，后builder.build()用这些复杂参数组装出对象。有点像摸板，build()做最后组装。常使用链式编程，即return this;
 
-### 2.5 原型(模型)模式
+### 2.5 原型(模型)模式 Prototype
 
 通过实例来生产实例 clone()
 
@@ -1356,9 +1528,9 @@ https://dandelioncloud.cn/article/details/1438309176060760065/
    **而且功能测试时，也无需测试旧功能，因为旧功能旧没去改动。**
 2. 
 
-### 3.2 装饰模式
+### 3.2 装饰模式 Decorator
 
-**灵活叠加多种功能。**
+**灵活叠加多种功能。(但是功能太散了会增加非常多的很小的类)**
 
 **装饰器和被装饰者实现同一接口，才能在装饰后返回装饰了的被装饰者**
 
@@ -1465,10 +1637,141 @@ public class Test {
   - Intrinsic为应当共享的
   - Extrinsci为不该共享的个性化
 
-### 3.4 代理模式
+### 3.4 代理模式 Proxy
 
-### 3.5 外观模式
+#### 3.4.1 Netty手写RPC，client动态代理service
+```java
+public class RPCNettyClient {
 
-### 3.6 组合模式
+    private static ExecutorService executorService = Executors.newFixedThreadPool(6);
+    private static RPCClientChannleHandler clientHandler = null;
+    private static int count = 0;
 
-### 3.7 桥接模式
+
+
+    public static void main(String[] args) {
+
+        //客户端需要一个事件循环组
+        EventLoopGroup workGroup = new NioEventLoopGroup();
+
+        try {
+            //创建客户端启动对象
+            //注意客户端使用的不是 ServerBootstrap 而是 Bootstrap
+            clientHandler = new RPCClientChannleHandler();
+            Bootstrap bootstrap = new Bootstrap();
+            bootstrap.group(workGroup)
+                    .channel(NioSocketChannel.class) // 设置客户端通道的实现类(反射)，和服务端不一样
+                    .handler(new ChannelInitializer() {
+                        @Override
+                        protected void initChannel(Channel ch) throws Exception {
+                            ch.pipeline().addLast(new StringDecoder());
+                            ch.pipeline().addLast(new StringEncoder());
+                            ch.pipeline().addLast(clientHandler); //加入自己的处理器
+                        }
+                    });
+
+            System.out.println("客户端ok");
+            //启动客户端去连接服务器端
+            IService service = (IService) getBean(IService.class, APIContants.FUCTION_HELLO);
+            bootstrap.connect(new InetSocketAddress("localhost", 6677)).sync();
+            System.out.println("又阻塞吗");
+            System.out.println(service.hello("你好鸭"));
+
+
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        } finally {
+            workGroup.shutdownGracefully();
+        }
+
+        /*clientHandler = new RPCClientChannleHandler();
+        //创建EventLoopGroup
+        NioEventLoopGroup group = new NioEventLoopGroup();
+        Bootstrap bootstrap = new Bootstrap();
+        bootstrap.group(group)
+                .channel(NioSocketChannel.class)
+                .option(ChannelOption.TCP_NODELAY, true)
+                .handler(
+                        new ChannelInitializer<SocketChannel>() {
+                            @Override
+                            protected void initChannel(SocketChannel ch) throws Exception {
+                                ChannelPipeline pipeline = ch.pipeline();
+                                pipeline.addLast(new StringDecoder());
+                                pipeline.addLast(new StringEncoder());
+                                pipeline.addLast(clientHandler);
+                            }
+                        }
+                );
+
+        try {
+            IService service = (IService) getBean(IService.class, APIContants.FUCTION_HELLO);
+            bootstrap.connect("127.0.0.1", 6677).sync();
+            System.out.println("又阻塞吗");
+            System.out.println(service.hello("你好鸭"));
+        } catch (Exception e) {
+            e.printStackTrace();
+        }*/
+
+
+    }
+
+    public static Object getBean(final Class<?> serivceClass, final String providerName) {
+
+        return Proxy.newProxyInstance(Thread.currentThread().getContextClassLoader(),
+                new Class<?>[]{serivceClass}, (proxy, method, args) -> {
+
+                    System.out.println("(proxy, method, args) 进入...." + (++count) + " 次");
+                    //{}  部分的代码，客户端每调用一次 hello, 就会进入到该代码
+
+                    //设置要发给服务器端的信息
+                    //providerName：协议头，args[0]：就是客户端要发送给服务端的数据
+
+                    //
+                    clientHandler.setMsg(providerName + args[0]);
+                    return executorService.submit(clientHandler).get();
+                });
+    }
+}
+
+public class RPCClientChannleHandler extends ChannelInboundHandlerAdapter implements Callable {
+
+    private ChannelHandlerContext context;
+    private String msg;
+    private Object result;
+
+    @Override
+    public void channelActive(ChannelHandlerContext ctx) throws Exception {
+        System.out.println("channelActive");
+        context = ctx;
+    }
+
+    @Override
+    public synchronized  void channelRead(ChannelHandlerContext ctx, Object msg) throws Exception {
+        System.out.println("log = 客户端接收到请求：" + msg);
+        result = msg;
+        notify();
+    }
+
+
+    @Override
+    public synchronized Object call() throws Exception {
+        System.out.println("进来call");
+        context.writeAndFlush(msg);
+        wait();
+        return result;
+    }
+
+    public void setMsg(String msg) {
+        System.out.println("client 入参 " + msg);
+        this.msg = msg;
+    }
+}
+```
+
+### 3.5 外观模式 Facade
+
+### 3.6 组合模式 Composite
+使容器和内容具有一致性(共同父类)，容器即可包含容器也可包含内容（有点类似Visitor的ObjectStructure结构对象）
+比如，文件夹是容器，文件为内容，文件夹内部可以包含文件夹，也可包含文件，因此抽取出一个共同父类，并且在容器(文件夹)内部进行集合管理
+
+### 3.7 桥接模式 Bridge
